--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "3.1.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "video.js": "^7.8.4",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "laravel-echo": "^1.8.1",
         "numeral": "^2.0.6",
-        "pusher-js": "^7.0.0"
+        "pusher-js": "^7.0.0",
+        "vue-video-player": "^5.0.2",
+        "vue-videojs7": "^0.1.5"
     }
 }
