--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "laravel-echo": "^1.8.1",
         "numeral": "^2.0.6",
         "pusher-js": "^7.0.0",
+        "vue-avatar": "^2.3.0",
         "vue-video-player": "^5.0.2",
         "vue-videojs7": "^0.1.5"
     }
